# gif-editor

./: .gitmodules  CMakeLists.txt  README.md  gif-editor.pro
.github/workflows/: codeql-analysis.yml
gif-editor/: CMakeLists.txt  about.cpp  about.hpp  busyindicator.cpp  busyindicator.hpp  crop.cpp  crop.hpp  frame.cpp  frame.hpp  frameontape.cpp  frameontape.hpp  gif-editor.pro  license_dialog.cpp  license_dialog.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  resources.qrc  tape.cpp  tape.hpp  view.cpp  view.hpp
src/: CMakeLists.txt  about.cpp  busyindicator.cpp  busyindicator.hpp  crop.cpp  frame.cpp  frame.hpp  frameontape.cpp  frameontape.hpp  gif-editor.rc  mainwindow.cpp  resources.qrc  tape.cpp  tape.hpp  view.cpp  view.hpp
